# language-coq

./: .gitignore  LICENSE  language-coq.cabal  shell.nix  stack.yaml
lib/Language/Coq/Definitions/CLib/Dyn/: Make.hs
lib/Language/Coq/Definitions/Engine/: EVarKinds.hs  NameGen.hs  UState.hs
lib/Language/Coq/Definitions/Interp/: ConstrExpr.hs  GenRedExpr.hs
lib/Language/Coq/Definitions/Kernel/: Constr.hs  Declarations.hs  EVar.hs  Names.hs  Sorts.hs  Univ.hs
lib/Language/Coq/Definitions/Kernel/Names/: Constant.hs  DirPath.hs  Id.hs  KerName.hs  KerPair.hs  Label.hs  MBId.hs  ModPath.hs  MutInd.hs  Name.hs
lib/Language/Coq/Definitions/Kernel/Univ/: Instance.hs  Level.hs  RawLevel.hs  Universe.hs
lib/Language/Coq/Definitions/Kernel/Univ/Universe/: Expr.hs
lib/Language/Coq/Definitions/Lib/: CAST.hs  GenArg.hs  Loc.hs
lib/Language/Coq/Definitions/Lib/GenArg/: ArgT.hs
lib/Language/Coq/Definitions/PreTyping/: GlobTerm.hs
lib/Language/Coq/Definitions/Vernac/: VernacExpr.hs
lib/PrettyPrinter/: ToCoqString.hs  ToSExp.hs
